# ioi-mcp-server

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
skills/artifact-workflow/: SKILL.md
skills/contribution-workflow/: SKILL.md
skills/new-artifact-workflow/: SKILL.md
skills/sparql-workflow/: SKILL.md
src/ioi_mcp/: __init__.py  batch_generator.py  constraint_builder.py  extension_gen.py  graph_builder.py  instantiator_gen.py  manifest.py  ontology_loader.py  scaffold_case.py  server.py  sparql_context.py  test_rule.py  type_inferencer.py  validator.py
src/ioi_mcp/data/: forensics_wiki_index.json  ioi-ext.ttl  ioi_artifact_manifest.json  ioi_registry.json
src/ioi_mcp/data/templates/: evtx_template-entry_clean.json  lnk_template-entry.json  mft_template-entry_clean.json  office_xml_template-entry.json  usn_template-entry_clean.json
tests/: test_all_artifacts.py  test_amcache.csv  test_bam.csv  test_evtx.csv  test_jumplist.csv  test_mft.csv  test_network.csv  test_prefetch.csv  test_services.csv  test_shellbags.csv  test_srum.csv  test_usnjrnl.csv
