[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ioi-mcp-server"
version = "0.2.0"
description = "IOI Framework MCP Server — scalable CASE/UCO artifact graph generator for digital forensics"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "rdflib>=7.0.0",
    "case-utils>=0.15.0",
]

[project.scripts]
ioi-mcp = "ioi_mcp.server:main"
